[package]
name = "datetime-string"
version = "0.2.0"
authors = ["YOSHIOKA Takuma <lo48576@hard-wi.red>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Datetime string types"
repository = "https://gitlab.com/lo48576/datetime-string"
keywords = ["datetime", "string"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
all-features = true

[features]
default = ["std"]

alloc = []
alloc_with_serde = ["alloc", "serde/alloc"]
std = ["alloc"]
std_with_serde = ["std", "serde/std"]

[dependencies]
chrono04 = { package = "chrono", version = "0.4.19", default-features = false, optional = true }
serde = { version = "1.0.116", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
serde_test = "1.0.116"

[badges]
maintenance = { status = "experimental" }
gitlab = { repository = "lo48576/datetime-string", branch = "master" }
